--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.3",
