--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.3",
     "mongoose-mongodb-errors": "0.0.2",
     "morgan": "^1.9.1",
