--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.4.3",
     "mongoose-mongodb-errors": "0.0.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
     "nodemon": "^1.18.9",
     "uuid": "^3.3.2"
   }
